# bloom-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
bloom_cli/: main.py
